--- a/FaceTweet/packages.config
+++ b/FaceTweet/packages.config
@@ -1,5 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetAuth" version="1.0.5" targetFramework="net45" />
+  <package id="DotNetAuth.Profiles" version="1.0.5" targetFramework="net45" />
+  <package id="DotNetOpenAuth" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.Core" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.Core.UI" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.InfoCard" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.InfoCard.UI" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.Common" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.Core" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.ServiceProvider" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth2.AuthorizationServer" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth2.Client" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth2.Client.UI" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth2.ClientAuthorization" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth2.Core" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth2.ResourceServer" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.Core" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.Core.UI" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.Provider" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.Provider.UI" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty.UI" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenIdInfoCard.UI" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenIdOAuth" version="4.3.4.13329" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
@@ -22,5 +47,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="RestSharp" version="103.4" targetFramework="net45" />
+  <package id="TaskParallelLibrary" version="1.0.2856.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
